--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
 .contenitore {
     max-width: 1280px;
     margin: auto;
@@ -65,4 +70,8 @@
     background-color: #8900fe;
     min-height: 70px;
     margin-top: 10px;
+}
+
+.logo {
+    height: 40px;
 }
