--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,9 +41,11 @@ a {
 }
 
 .fascia-gialla {
-    background-color: #e1d67a;
-    min-height: 450px;
     margin-bottom: 30px;
+    background-position: center;
+    background-image: url(../img/banner.jpg);
+    min-height: 683px;
+    border-radius: 10px;
 }
 
 .sfondo-blu {
@@ -87,5 +89,5 @@ a {
 }
 
 .logo {
-    height: 40px;
+    height: 45px;
 }
