fix colori testo

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(247, 243, 243);
 }
 
 nav ul li {
@@ -17,11 +17,15 @@ nav ul li {
 
 a {
     text-decoration: none;
-    color: #8A8A8A;
+    color: black;
 }
 
 h1 {
     font-size: 35px;
+}
+
+h4 {
+    margin-bottom: 10px;
 }
 
 .contenitore {
@@ -35,7 +39,7 @@ h1 {
     clear: both;
 }
 
-.fascia-violetta {
+.fascia-alta {
     background-color: rgb(238, 238, 238);
     min-height: 120px;
 }
@@ -98,7 +102,7 @@ h1 {
 .frase-finale {
     min-height: 70px;
     margin-top: 10px;
-    color: #8A8A8A;
+    color: black;
     text-align: center;
 }
 
@@ -111,6 +115,7 @@ h1 {
     width: 255px;
     border-radius: 10px;
     object-fit: cover;
+    margin-bottom: 20px;
 
 }
 
@@ -119,6 +124,7 @@ h1 {
     height: 255px;
     border-radius: 10px;
     object-fit: cover;
+    margin-bottom: 20px;
 }
 
 .immagine-centro {
@@ -126,5 +132,6 @@ h1 {
     height: 255px;
     border-radius: 10px;
     object-fit: cover;
+    margin-bottom: 20px;
 }
 
